Next-16: fix layout issues

--- a/src/features/auth/signUp/ui/SignUp.module.css
+++ b/src/features/auth/signUp/ui/SignUp.module.css
@@ -1,51 +1,50 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  padding: 24px;
-  background-color: var(--color-dark-500);
-  border: 1px solid var(--color-dark-300);
-  border-radius: 2px;
-  max-width: 378px;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    background-color: var(--color-dark-500);
+    border: 1px solid var(--color-dark-300);
+    border-radius: 2px;
+    max-width: 378px;
+    width: 100%;
 }
 
 
 .containerBtn {
-  display: flex;
-  flex-direction: row;
-  gap: 60px;
-  padding: 13px 0;
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    padding: 13px 0;
 }
 
 .containerInput {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  min-height: 84px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    min-height: 84px;
 }
 
 .inputCustom {
-  min-width: 330px;
-  min-height: 36px;
-  width: 100%;
+    min-width: 330px;
+    min-height: 36px;
+    width: 100%;
 }
 
 .containerIAgree {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-  padding-bottom: 12px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    padding-bottom: 12px;
 }
 
 .paragraph {
-  display: inline;
+    display: inline;
 }
 
-
-
-
-
 .buttonFullWidth {
-  width: 100%;
-  margin-bottom: 18px;
+    width: 100%;
+    margin-bottom: 18px;
+}
+.link{
+    font-size: var(--font-size-xs);
 }
